--- a/src/CSS/About.css
+++ b/src/CSS/About.css
@@ -9,3 +9,47 @@
 .image-line {
   width: 15%;
 }
+
+.bullet-icon {
+  height: 150px;
+  margin-bottom: 0px;
+}
+
+.bullet-title {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.progress-bar-class {
+  margin-top: 50px;
+  margin-right: 50px;
+  width: 40%;
+  float: right;
+}
+
+.p-bar-col {
+  font-family: Raleway-bold;
+  height: 50px;
+}
+
+.progress {
+  height: 30px !important;
+}
+.self-pic {
+  width: 50%;
+  margin-top: 50px;
+  float: right;
+}
+
+.self-icon {
+  height: 250px;
+}
+
+h3 {
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+span {
+  color: red;
+}
