--- a/src/CSS/Home.css
+++ b/src/CSS/Home.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   background: url('../img/starfall.jpg');
-  background-size: contain;
+  background-size: auto;
   background-position: top;
   background: cover;
   align-items: center;
